--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -271,6 +271,7 @@ video {
   gap: 10px;
 }
 .section-3 .container .swiper-slide {
+  width: 23% !important;
   text-align: center;
   font-size: 18px;
   background: #fff;
@@ -285,7 +286,6 @@ video {
 }
 .section-3 .container .swiper-slide img {
   display: block;
-  width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
