--- a/assets/scss/about.css
+++ b/assets/scss/about.css
@@ -38,10 +38,45 @@ header .container .socials a i {
   color: white;
   font-size: 18px;
 }
-header .container .lang .custom-select select {
+header .container .lang .custom-select .dropdown {
+  position: relative;
+  display: inline-block;
+}
+header .container .lang .custom-select .dropbtn {
   background-color: #fdb60d;
+  color: white;
+  border: none;
   border-radius: 10px;
-  padding: 2px 8px;
+  padding: 5px 8px;
+  font-size: 12px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+}
+header .container .lang .custom-select .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fdb60d;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  border-radius: 10px;
+}
+header .container .lang .custom-select .dropdown-content a {
+  color: rgb(255, 255, 255);
+  padding: 12px 16px;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  display: block;
+  border-radius: 10px;
+}
+header .container .lang .custom-select .dropdown-content a:hover {
+  background-color: rgba(196, 194, 191, 0.4);
+}
+header .container .lang .custom-select .dropdown:hover .dropdown-content {
+  display: block;
+}
+header .container .lang .custom-select .dropdown:hover .dropbtn {
+  background-color: #fdb60d;
 }
 header .bottom-header {
   display: flex;
