--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -42,10 +42,52 @@ header {
     }
     .lang {
       .custom-select {
-        select {
+        .dropdown {
+          position: relative;
+          display: inline-block;
+        }
+
+        .dropbtn {
           background-color: #fdb60d;
+          color: white;
+          border: none;
           border-radius: 10px;
-          padding: 2px 8px;
+          padding: 5px 8px;
+          font-size: 12px;
+          cursor: pointer;
+          font-family: Arial, Helvetica, sans-serif;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #fdb60d;
+          // min-width: 50px;
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          z-index: 1;
+          border-radius: 10px;
+        }
+
+        .dropdown-content a {
+          color: rgb(255, 255, 255);
+          padding: 12px 16px;
+          text-decoration: none;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 12px;
+          display: block;
+          border-radius: 10px;
+        }
+
+        .dropdown-content a:hover {
+          background-color: #c4c2bf66;
+        }
+
+        .dropdown:hover .dropdown-content {
+          display: block;
+        }
+
+        .dropdown:hover .dropbtn {
+          background-color: #fdb60d;
         }
       }
     }
