--- a/assets/scss/services.scss
+++ b/assets/scss/services.scss
@@ -1,3 +1,148 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@-webkit-keyframes come-in {
+  0% {
+    -webkit-transform: translatey(100px);
+    transform: translatey(100px);
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(-50px) scale(0.4);
+    transform: translateX(-50px) scale(0.4);
+  }
+  70% {
+    -webkit-transform: translateX(0px) scale(1.2);
+    transform: translateX(0px) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translatey(0px) scale(1);
+    transform: translatey(0px) scale(1);
+    opacity: 1;
+  }
+}
+@keyframes come-in {
+  0% {
+    -webkit-transform: translatey(100px);
+    transform: translatey(100px);
+    opacity: 0;
+  }
+  30% {
+    -webkit-transform: translateX(-50px) scale(0.4);
+    transform: translateX(-50px) scale(0.4);
+  }
+  70% {
+    -webkit-transform: translateX(0px) scale(1.2);
+    transform: translateX(0px) scale(1.2);
+  }
+  100% {
+    -webkit-transform: translatey(0px) scale(1);
+    transform: translatey(0px) scale(1);
+    opacity: 1;
+  }
+}
+
+.floating-container {
+  position: fixed;
+  width: 100px;
+  height: 100px;
+  bottom: 0;
+  right: 0;
+  margin: 35px 25px;
+}
+.floating-container:hover {
+  height: 350px;
+}
+.floating-container:hover .floating-button {
+  box-shadow: 0 10px 25px #fdb60d;
+  -webkit-transform: translatey(5px);
+  transform: translatey(5px);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.floating-container:hover .element-container .float-element:nth-child(1) {
+  -webkit-animation: come-in 0.4s forwards 0.2s;
+  animation: come-in 0.4s forwards 0.2s;
+}
+.floating-container:hover .element-container .float-element:nth-child(2) {
+  -webkit-animation: come-in 0.4s forwards 0.4s;
+  animation: come-in 0.4s forwards 0.4s;
+}
+.floating-container:hover .element-container .float-element:nth-child(3) {
+  -webkit-animation: come-in 0.4s forwards 0.6s;
+  animation: come-in 0.4s forwards 0.6s;
+}
+.floating-container:hover .element-container .float-element:nth-child(4) {
+  -webkit-animation: come-in 0.4s forwards 0.8s;
+  animation: come-in 0.4s forwards 0.8s;
+}
+
+.floating-container .floating-button {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background: #fdb60d;
+  bottom: 0;
+  border-radius: 50%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  color: white;
+  line-height: 65px;
+  text-align: center;
+  font-size: 20px;
+  z-index: 100;
+  box-shadow: 0 10px 25px -5px rgba(44, 179, 240, 0.6);
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  i {
+    font-size: 20px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+.floating-container .float-element {
+  position: relative;
+  display: block;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  margin: 15px auto;
+  color: white;
+  font-weight: 500;
+  text-align: center;
+  line-height: 50px;
+  z-index: 0;
+  opacity: 0;
+  -webkit-transform: translateY(100px);
+  transform: translateY(100px);
+  a {
+    color: white;
+    font-size: 22px;
+  }
+}
+.floating-container .float-element .material-icons {
+  vertical-align: middle;
+  font-size: 16px;
+}
+.floating-container .float-element:nth-child(1) {
+  background: #42a5f5;
+  box-shadow: 0 20px 20px -10px rgba(66, 165, 245, 0.5);
+}
+.floating-container .float-element:nth-child(2) {
+  background: #4caf50;
+  box-shadow: 0 20px 20px -10px rgba(76, 175, 80, 0.5);
+}
+.floating-container .float-element:nth-child(3) {
+  background: #ff9800;
+  box-shadow: 0 20px 20px -10px rgba(255, 152, 0, 0.5);
+}
+.floating-container .float-element:nth-child(4) {
+  background: #eb1708;
+  box-shadow: 0 20px 20px -10px rgba(255, 152, 0, 0.5);
+}
+// FAB button end
+
 // HEADER START
 header {
   background-color: #0b2830;
@@ -204,104 +349,45 @@ header {
   }
 }
 .section-2 {
-  padding: 30px 0;
-  font-family: Arial, Helvetica, sans-serif;
-
   .container {
     width: 80%;
     margin: auto;
-    h1 {
-      text-align: center;
-      color: #1a8395;
-      margin: auto;
-      width: 40%;
-      border-bottom: 6px solid orange;
-      padding-bottom: 10px;
-    }
-    p {
-      width: 70%;
-      text-align: center;
-      margin: 20px auto;
-    }
-    .boxes {
+    padding: 30px 0;
+    .section-2-top {
+      width: 100%;
       display: flex;
       justify-content: space-between;
-      .box {
-        width: 30%;
+      padding-bottom: 30px;
+      .card {
+        width: 23%;
         text-align: center;
-        background-color: #f9f9f9;
-        border: 1px solid #ff9800;
-        padding: 10px;
-        i {
-          font-size: 40px;
-          color: #096e82;
-          margin: 10px 0;
-        }
-        h4 {
-          color: #fdb60d;
-          font-weight: 300;
-        }
-        p {
-          font-size: 14px;
-        }
-      }
-    }
-  }
-}
-.section-3 {
-  .container {
-    width: 80%;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: auto;
-    .form {
-      width: 80%;
-      margin: auto;
-      background-color: #f9f9f9;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      flex-wrap: wrap;
-      input {
-        margin: 10px 0;
-        border: 1px solid #fdb60d;
+        padding: 20px 20px;
+        background-color: white;
         border-radius: 10px;
-        padding: 3px;
-      }
-      label {
-        font-size: 14px;
-        color: #096e82;
-      }
-      textarea {
-        margin: 10px 0;
-        border: 1px solid #fdb60d;
-        border-radius: 10px;
-        height: 10vh;
-        padding: 5px;
-      }
-      button {
-        width: 10%;
-        margin: auto;
-        border: none;
-        background-color: #096e82;
-        padding: 5px;
-        color: white;
-        cursor: pointer;
-        border-radius: 10px;
-        transition: 0.4s;
-        &:hover {
-          background-color: #fdb60d;
-          color: #096e82;
-        }
-      }
-    }
-    iframe {
-      width: 100%;
-      opacity: 70%;
-      margin-bottom: 20px;
-    }
-  }
-}
+        box-shadow: -2px 16px 96px -16px rgba(0, 0, 0, 0.81);
+        -webkit-box-shadow: -2px 16px 96px -16px rgba(0, 0, 0, 0.81);
+        -moz-box-shadow: -2px 16px 96px -16px rgba(0, 0, 0, 0.81);
 
+        .icon {
+          width: 50%;
+          padding: 20px 0;
+          margin: auto;
+          border-radius: 100%;
+          background-color: #fdb60d;
+          i {
+            font-size: 40px;
+            color: white;
+          }
+        }
+        h3 {
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 16px;
+          margin: 20px 0;
+        }
+      }
+    }
+  }
+}
 // MAIN
 
 // Footer start!
@@ -381,148 +467,3 @@ footer {
   }
 }
 // Footer end!
-
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-@-webkit-keyframes come-in {
-  0% {
-    -webkit-transform: translatey(100px);
-    transform: translatey(100px);
-    opacity: 0;
-  }
-  30% {
-    -webkit-transform: translateX(-50px) scale(0.4);
-    transform: translateX(-50px) scale(0.4);
-  }
-  70% {
-    -webkit-transform: translateX(0px) scale(1.2);
-    transform: translateX(0px) scale(1.2);
-  }
-  100% {
-    -webkit-transform: translatey(0px) scale(1);
-    transform: translatey(0px) scale(1);
-    opacity: 1;
-  }
-}
-@keyframes come-in {
-  0% {
-    -webkit-transform: translatey(100px);
-    transform: translatey(100px);
-    opacity: 0;
-  }
-  30% {
-    -webkit-transform: translateX(-50px) scale(0.4);
-    transform: translateX(-50px) scale(0.4);
-  }
-  70% {
-    -webkit-transform: translateX(0px) scale(1.2);
-    transform: translateX(0px) scale(1.2);
-  }
-  100% {
-    -webkit-transform: translatey(0px) scale(1);
-    transform: translatey(0px) scale(1);
-    opacity: 1;
-  }
-}
-
-.floating-container {
-  position: fixed;
-  width: 100px;
-  height: 100px;
-  bottom: 0;
-  right: 0;
-  margin: 35px 25px;
-}
-.floating-container:hover {
-  height: 350px;
-}
-.floating-container:hover .floating-button {
-  box-shadow: 0 10px 25px #fdb60d;
-  -webkit-transform: translatey(5px);
-  transform: translatey(5px);
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.floating-container:hover .element-container .float-element:nth-child(1) {
-  -webkit-animation: come-in 0.4s forwards 0.2s;
-  animation: come-in 0.4s forwards 0.2s;
-}
-.floating-container:hover .element-container .float-element:nth-child(2) {
-  -webkit-animation: come-in 0.4s forwards 0.4s;
-  animation: come-in 0.4s forwards 0.4s;
-}
-.floating-container:hover .element-container .float-element:nth-child(3) {
-  -webkit-animation: come-in 0.4s forwards 0.6s;
-  animation: come-in 0.4s forwards 0.6s;
-}
-.floating-container:hover .element-container .float-element:nth-child(4) {
-  -webkit-animation: come-in 0.4s forwards 0.8s;
-  animation: come-in 0.4s forwards 0.8s;
-}
-
-.floating-container .floating-button {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background: #fdb60d;
-  bottom: 0;
-  border-radius: 50%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  color: white;
-  line-height: 65px;
-  text-align: center;
-  font-size: 20px;
-  z-index: 100;
-  box-shadow: 0 10px 25px -5px rgba(44, 179, 240, 0.6);
-  cursor: pointer;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  i {
-    font-size: 20px;
-    position: absolute;
-    bottom: 15px;
-    right: 15px;
-  }
-}
-.floating-container .float-element {
-  position: relative;
-  display: block;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  margin: 15px auto;
-  color: white;
-  font-weight: 500;
-  text-align: center;
-  line-height: 50px;
-  z-index: 0;
-  opacity: 0;
-  -webkit-transform: translateY(100px);
-  transform: translateY(100px);
-  a {
-    color: white;
-    font-size: 22px;
-  }
-}
-.floating-container .float-element .material-icons {
-  vertical-align: middle;
-  font-size: 16px;
-}
-.floating-container .float-element:nth-child(1) {
-  background: #42a5f5;
-  box-shadow: 0 20px 20px -10px rgba(66, 165, 245, 0.5);
-}
-.floating-container .float-element:nth-child(2) {
-  background: #4caf50;
-  box-shadow: 0 20px 20px -10px rgba(76, 175, 80, 0.5);
-}
-.floating-container .float-element:nth-child(3) {
-  background: #ff9800;
-  box-shadow: 0 20px 20px -10px rgba(255, 152, 0, 0.5);
-}
-.floating-container .float-element:nth-child(4) {
-  background: #eb1708;
-  box-shadow: 0 20px 20px -10px rgba(255, 152, 0, 0.5);
-}
-// FAB button end
