--- a/assets/scss/responsive/responsive-about.scss
+++ b/assets/scss/responsive/responsive-about.scss
@@ -1,5 +1,6 @@
 @media only screen and (max-width: 768px) {
   header {
+    position: relative;
     .top-header {
       .container {
         width: 98%;
@@ -21,20 +22,29 @@
       }
       nav {
         margin-left: 0px;
+        display: flex;
         ul {
           z-index: 111;
-          position: absolute;
+          position: fixed;
           display: none;
-          left: 0;
-          top: 155px;
-          width: 100%;
+          padding-top: 50%;
+          display: flex;
+          gap: 50px !important;
+          right: 0;
+          top: 0px;
+          width: 50%;
           text-align: center;
-          height: 25vh;
+          height: 110vh;
           font-size: 30px;
           flex-direction: column;
           background-color: #0b2830;
           border-bottom-left-radius: 20px;
           border-bottom-right-radius: 20px;
+          li {
+            a {
+              font-size: 20px;
+            }
+          }
         }
       }
       .search {
