--- a/assets/scss/responsive/responsive-contact.css
+++ b/assets/scss/responsive/responsive-contact.css
@@ -30,8 +30,6 @@
     position: fixed;
     display: none;
     padding-top: 50%;
-    display: flex;
-    gap: 50px !important;
     right: 0;
     top: 0px;
     width: 50%;
@@ -42,6 +40,9 @@
     background-color: #0b2830;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+  }
+  header .bottom-header nav ul li {
+    margin: 20px 0 !important;
   }
   header .bottom-header nav ul li a {
     font-size: 20px;
