Change some tags

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -304,8 +304,8 @@ video {
           padding: 10px;
           width: 60%;
 
-          iframe {
-            width: 90%;
+          img {
+            width: 60%;
           }
         }
       }
