--- a/assets/scss/index.css
+++ b/assets/scss/index.css
@@ -278,8 +278,8 @@ video {
   padding: 10px;
   width: 60%;
 }
-.section-2 .container .section-2-bottom .info-2 .info-img iframe {
-  width: 90%;
+.section-2 .container .section-2-bottom .info-2 .info-img img {
+  width: 60%;
 }
 
 .section-3 {
